@@ -17,14 +17,17 @@
 package org.apache.lucene.util.mutable;
 
 /**
- * {@link MutableValue} implementation of type 
- * <code>float</code>.
+ * {@link MutableValue} implementation of type <code>float</code>.
+ * When mutating instances of this object, the caller is responsible for ensuring 
+ * that any instance where <code>exists</code> is set to <code>false</code> must also 
+ * <code>value</code> set to <code>0.0F</code> for proper operation.
  */
 public class MutableValueFloat extends MutableValue {
   public float value;
 
   @Override
   public Object toObject() {
+    assert exists || 0.0F == value;
     return exists ? value : null;
   }
 
@@ -45,12 +48,14 @@ public class MutableValueFloat extends MutableValue {
 
   @Override
   public boolean equalsSameType(Object other) {
+    assert exists || 0.0F == value;
     MutableValueFloat b = (MutableValueFloat)other;
     return value == b.value && exists == b.exists;
   }
 
   @Override
   public int compareSameType(Object other) {
+    assert exists || 0.0F == value;
     MutableValueFloat b = (MutableValueFloat)other;
     int c = Float.compare(value, b.value);
     if (c != 0) return c;
@@ -60,6 +65,7 @@ public class MutableValueFloat extends MutableValue {
 
   @Override
   public int hashCode() {
+    assert exists || 0.0F == value;
     return Float.floatToIntBits(value);
   }
 }
